# sdformat-editor

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  _config.yml  build.sh  index.html
docs/html/: AddElementCommand_8h_source.html  CloseModelViewerCommand_8h_source.html  CreateFileCommand_8h_source.html  DeleteAttributeCommand_8h_source.html  DeleteElementCommand_8h_source.html  GenericCommand_8h_source.html  ModifyAttributeCommand_8h_source.html  ModifyElementCommand_8h_source.html  OpenDirectoryCommand_8h_source.html  OpenFileCommand_8h_source.html  OpenModelViewerCommand_8h_source.html  RenderModelCommand_8h_source.html  SaveFileCommand_8h_source.html  annotated.html  classAddElementCommand-members.html  classAddElementCommand.html  classAddElementCommand__coll__graph.map  classAddElementCommand__coll__graph.md5  classAddElementCommand__inherit__graph.dot  classAddElementCommand__inherit__graph.map  classAddElementCommand__inherit__graph.md5  classCloseModelViewerCommand-members.html  classCloseModelViewerCommand.html  classCloseModelViewerCommand__coll__graph.map  classCloseModelViewerCommand__coll__graph.md5  classCommandFactory-members.html  classCommandFactory.html  classCommandFactoryI-members.html  classCommandFactoryI.html  classCommandFactoryI__coll__graph.dot  classCommandFactoryI__coll__graph.map  classCommandFactoryI__coll__graph.md5  classCommandFactoryI__inherit__graph.dot  classCommandFactoryI__inherit__graph.map  classCommandFactoryI__inherit__graph.md5  classCommandFactory__coll__graph.dot  classCommandFactory__coll__graph.map  classCommandFactory__coll__graph.md5  classCommandFactory__inherit__graph.dot  classCommandFactory__inherit__graph.map  (+292 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+22 more)
docs/latex/: AddElementCommand_8h_source.tex  CloseModelViewerCommand_8h_source.tex  CreateFileCommand_8h_source.tex  DeleteAttributeCommand_8h_source.tex  DeleteElementCommand_8h_source.tex  GenericCommand_8h_source.tex  ModifyAttributeCommand_8h_source.tex  ModifyElementCommand_8h_source.tex  OpenDirectoryCommand_8h_source.tex  OpenFileCommand_8h_source.tex  OpenModelViewerCommand_8h_source.tex  RenderModelCommand_8h_source.tex  SaveFileCommand_8h_source.tex  annotated.tex  classAddElementCommand.tex  classAddElementCommand__coll__graph.dot  classAddElementCommand__coll__graph.md5  classAddElementCommand__inherit__graph.md5  classCloseModelViewerCommand.tex  classCloseModelViewerCommand__coll__graph.md5  classCommandFactory.tex  classCommandFactoryI.tex  classCommandFactoryI__coll__graph.dot  classCommandFactoryI__coll__graph.md5  classCommandFactoryI__inherit__graph.dot  classCommandFactoryI__inherit__graph.md5  classCommandFactory__coll__graph.dot  classCommandFactory__coll__graph.md5  classCommandFactory__inherit__graph.dot  classCommandFactory__inherit__graph.md5  classCommandI.tex  classCommandI.tex.tmp  classCommandI__coll__graph.dot  classCommandI__inherit__graph.dot  classCommandI__inherit__graph.md5  classCreateFileCommand.tex  classCreateFileCommand__coll__graph.md5  classDeleteAttributeCommand.tex  classDeleteAttributeCommand__coll__graph.md5  classDeleteElementCommand.tex  (+114 more)
documentation/html/: classGUII.html  classGUI__coll__graph.md5  functions_func.html  gui_8h_source.html  gui__interface_8h_source.html  inherit_graph_0.md5
documentation/html/search/: all_2.js  variables_0.js
documentation/latex/: annotated.tex  classGUI.tex  classGUII.tex  classGUI__coll__graph.md5  files.tex  gui__interface_8h_source.tex
example_models/: DefaultModel.sdf  UnitCube.stl  UnitCylinder.stl  UnitSphere.stl
example_models/Beaumont/: beaumont.stl  beaumont_for_added_mass_matrix_analysis.stl  model.config  model.sdf
example_models/SuperSimpleModel/: model.config  model.sdf
example_models/Waterwitch/: model.config  model.sdf  propeller.stl  waterwitch.stl  waterwitch_no_enclosure_cover.stl
include/: command_factory.h  file_editor_runner.h  file_operations.h  gui.h  gui_interface.h  model_viewer.h  model_viewer_interface.h  sdformat_parser.h  sdformat_parser_interface.h
include/commands/: AddAttributeCommand.h  AddElementCommand.h  CloseModelViewerCommand.h  CreateFileCommand.h  DeleteAttributeCommand.h  DeleteElementCommand.h  DeleteSceneCommand.h  GenericCommand.h  ModifyAttributeCommand.h  ModifyElementCommand.h  OpenDirectoryCommand.h  OpenFileCommand.h  OpenModelCommand.h  OpenModelViewerCommand.h  RenderModelCommand.h  SaveFileCommand.h
include/interfaces/: command_factory_interface.h  command_interface.h  gui_interface.h  model_viewer_interface.h  sdformat_parser_interface.h
model_viewer/: CMakeLists.txt
model_viewer/include/: model_viewer.h
model_viewer/include/interfaces/: model_viewer_interface.h
model_viewer/src/: main.cpp  model_viewer.cpp
src/: command_factory.cpp  file_editor_runner.cpp  file_operations.cpp  gui.cpp  main.cpp  model_viewer.cpp  sdformat_parser.cpp
src/commands/: AddAttributeCommand.cpp  AddElementCommand.cpp  CloseModelViewerCommand.cpp  CreateFileCommand.cpp  DeleteAttributeCommand.cpp  DeleteElementCommand.cpp  DeleteSceneCommand.cpp  GenericCommand.cpp  ModifyAttributeCommand.cpp  ModifyElementCommand.cpp  OpenDirectoryCommand.cpp  OpenFileCommand.cpp  OpenModelViewerCommand.cpp  RenderModelCommand.cpp  SaveFileCommand.cpp
tests/: test_gui.cpp  test_model_viewer.cpp  test_sdformat_parser.cpp
